syntax = "proto3";

option java_multiple_files = true;

package com.fithub.services.systemevents;

message ActionLogRequest {
	string microserviceName = 1;
	string actionType = 2;
	string resourceTitle = 3;
	string responseType = 4;
}

message VoidResponse {
}

service ActionLoggerService {
	rpc logAction(ActionLogRequest) returns (VoidResponse);
}